# IMM

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.txt
appImmUnity/Projects/Android/app/: CMakeLists.txt  build.gradle
appImmUnity/Projects/Android/app/src/main/: AndroidManifest.xml
appImmViewer/: CMakeLists.txt  appImmViewer.vcxproj  build.gradle
appImmViewer/Projects/: .gitignore  build.bat  build.gradle  quilllogcat.sh  restart_quill_process.sh  start-debugger-android-o.sh  start-debugger.sh  symbolize-debug-crash.sh  symbolize-release-crash.sh
appImmViewer/Projects/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
appImmViewer/Projects/app/gradle/wrapper/: gradle-wrapper.properties
appImmViewer/Projects/app/src/main/: AndroidManifest.xml
appImmViewer/Projects/app/src/main/res/values/: theme.xml  (+3 more)
appImmViewer/Projects/app/src/retail_demo/: AndroidManifest.xml
appImmViewer/exe/: settings.json
appImmViewer/src/: mymain.cpp  resolve.cpp  resolve.h  settings.cpp  settings.h  shader_resolve_fs.hlsl  shader_resolve_vs.hlsl
appImmViewer/src/android/: AndroidManifest.xml
appImmViewer/src/android/cpp/: Haptics.h  Log.h  OvrApp.cpp
appImmViewer/src/android/res/values/: strings.xml
appImmViewer/src/simpleJSON/: JSON.h
appImmViewer/src/viewer/: piCameraD.cpp  piCameraD.h  viewer.cpp  viewer.h
code/projects/android/ImmAndroid/immcore/: CMakeLists.txt  build.gradle
code/projects/android/ImmAndroid/immimporter/: CMakeLists.txt  build.gradle
code/projects/android/ImmAndroid/immplayer/: CMakeLists.txt  build.gradle
code/projects/android/ImmAndroid/immunity/: .gitignore  CMakeLists.txt  build.gradle
libCore/: AndroidManifest.xml  CMakeLists.txt  LICENSE.TXT  build.gradle  libCore.vcxproj
libCore/src/libBasics/: piArray.cpp  piArray.h  piColor.h  piFile.cpp  piFile.h  piFileName.cpp  piImage.h  piPool.cpp  piStr.cpp  piStr.h  piStreamArrayO.h  piStreamI.h  piSystemInfo.h  piTArray.h  piThread.h  piTick.cpp  piTimer.h  piTypes.cpp  piVecTypes.h  piWindow.h
libCore/src/libBasics/android/: piCStr.cpp  piFileOS.cpp  piLog.cpp  piMutex.cpp  piTimer.cpp
libCore/src/libBasics/windows/: piDebug.cpp  piLog.cpp  piTimer.cpp
libCore/src/libCompression/basic/: piBitInterlacer.cpp  piPredictors.cpp  piPredictors.h  piQuantize.cpp  piQuantize.h
libCore/src/libMesh/: piRenderMesh.h
libCore/src/libRender/opengl4x/: glcorearb.h  piGL4X_RenderContext.h  piGL4X_Renderer.cpp
libCore/src/libRender/opengl4x/windows/: piGL4X_RenderContextOS.cpp
libCore/src/libRender/opengles/: gl3.h  gl31.h  piGLES_Renderer.cpp  piGLES_Renderer.h
libCore/src/libSound/: piSound.cpp  piSound.h  piSoundEngineNULL.cpp
libCore/src/libSound/windows/: fakeWAV.h  piSoundEngineAudioSDKBackend.cpp  piSoundEngineAudioSDKBackend.h  piSoundEngineDS.h
libCore/src/libVR/: piVR.cpp  piVR.h
libCore/src/libVR/oculus/: piOculus.cpp  piOculus.h
libCore/src/libVR/vive/: piVive.h
libCore/src/libWave/: piWave.cpp
libCore/src/libWave/formats/: piWaveOGG.cpp  piWaveOGG.h
libCore/src/libWave/formats/ogg/: os_types.h
libImmImporter/: AndroidManifest.xml  CMakeLists.txt  build.gradle  libImmImporter.vcxproj
libImmImporter/src/document/: layer.cpp  layer.h  layerEffect.h  layerInstance.cpp  layerInstance.h  layerModel3d.cpp  layerModel3d.h  layerPaint.h  layerPaintPretessellated.cpp  layerPaintPretessellated.h  layerPaintStatic.cpp  layerPaintStatic.h  layerPicture.cpp  layerPicture.h  layerSound.cpp  layerSound.h  layerSpawnArea.cpp  layerSpawnArea.h  sequence.cpp  sequence.h
libImmImporter/src/document/behaviors/: keepalive.cpp  keepalive.h
libImmImporter/src/document/layerPaint/: drawing.h  drawingPretessellated.cpp  drawingPretessellated.h  drawingStatic.cpp  drawingStatic.h  element.cpp  element.h
libImmImporter/src/fromImmersive/: fromImmersive.cpp  fromImmersive.h  fromImmersiveLayer.cpp  fromImmersiveLayer.h  fromImmersiveLayerModel.cpp  fromImmersiveLayerModel.h  fromImmersiveLayerPaint.cpp  fromImmersiveLayerPaint.h  fromImmersiveLayerPicture.cpp  fromImmersiveLayerPicture.h  fromImmersiveLayerSound.cpp  fromImmersiveLayerSound.h  fromImmersiveLayerSpawnArea.cpp  fromImmersiveLayerSpawnArea.h  fromImmersiveUtils.cpp  fromImmersiveUtils.h
libImmPlayer/: CMakeLists.txt  build.gradle  create_shader.cmake  libImmPlayer.vcxproj
libImmPlayer/Projects/Android/app/: CMakeLists.txt  build.gradle
libImmPlayer/Projects/Android/gradle/wrapper/: gradle-wrapper.properties
libImmPlayer/src/: blue_noise.h  document.cpp  document.h  mngrPlayer.cpp  player.cpp  player.h  renderMode.h
libImmPlayer/src/layerRenderers/: renderLayer.h
libImmPlayer/src/layerRenderers/layerRendererModel/: layerRendererModel.cpp  layerRendererModel.h  shader_model_fs.glsl  shader_model_fs.hlsl  shader_model_vs.glsl  shader_model_vs.hlsl
libImmPlayer/src/layerRenderers/layerRendererPaint/pretessellated/: layerRendererPaintPretessellated.cpp  layerRendererPaintPretessellated.h  shader_pretessellated_brush_fs.es.glsl  shader_pretessellated_brush_fs.glsl  shader_pretessellated_brush_fs.hlsl  shader_pretessellated_brush_vs.glsl  shader_pretessellated_brush_vs.hlsl
libImmPlayer/src/layerRenderers/layerRendererPaint/static/: layerRendererPaintStatic.h  shader_static_brush_fs.es.glsl  shader_static_brush_fs.glsl  shader_static_brush_fs.hlsl  shader_static_brush_vs.es.glsl  shader_static_brush_vs.glsl  shader_static_brush_vs.hlsl
libImmPlayer/src/layerRenderers/layerRendererPicture/: layerRendererPicture.cpp  layerRendererPicture.h  shader_pi2D_fs.es.glsl  shader_pi2D_fs.glsl  shader_pi2D_fs.hlsl  shader_pi2D_vs.es.glsl  shader_pi2D_vs.glsl  shader_pi2D_vs.hlsl  shader_pip360Cubemap_fs.es.glsl  shader_pip360Cubemap_fs.glsl  shader_pip360Cubemap_vs.es.glsl  shader_pip360Cubemap_vs.glsl  shader_pip360Equirect_fs.es.glsl  shader_pip360Equirect_fs.glsl  shader_pip360Equirect_fs.hlsl  shader_pip360Equirect_vs.es.glsl  shader_pip360Equirect_vs.glsl  shader_pip360Equirect_vs.hlsl
libImmPlayer/src/layerRenderers/layerRendererSound/: layerRendererSound.cpp  layerRendererSound.h
(+326 files in other folders)
